--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Weather App</h1>
     <form method="POST">
-        <input type="text" name="city" placeholder="Enter City">
+        <!-- <input type="text" name="city" placeholder="Enter City"> -->
         <button type="submit">Get Weather</button>
     </form>
 
