--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <h1>Weather App</h1>
-    <form method="POST">
-        <!-- <input type="text" name="city" placeholder="Enter City"> -->
+    <!-- <form method="POST">
+        <input type="text" name="city" placeholder="Enter City">
         <button type="submit">Get Weather</button>
-    </form>
+    </form> -->
 
 {% if city_list is not none%}
 
