--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     </form>
 
 {% if city_list is not none%}
-
+<h1> {{ city }} </h1>
 <table>
     <tbody>
         {% for i in range(city_list|length) %}
