--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,11 @@
         <!-- <input type="text" name="city" placeholder="Enter City"> -->
         <button type="submit">Get Weather</button>
     </form>
+    
+    <p> {{ ip }} </p>
+    <p> {{ city }} </p>
 
 {% if city_list is not none%}
-<h1> {{ city }} </h1>
 <table>
     <tbody>
         {% for i in range(city_list|length) %}
