--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,10 @@
         <button type="submit">Get Weather</button>
     </form>
     
-    <p> {{ ip }} </p>
-    <p> {{ city }} </p>
+    <p> IP: {{ ip }} </p>
+    <p> CITY: {{ city }} </p>
+    <p> ISP: {{ isp }} </p>
+
 
 {% if city_list is not none%}
 <table>
