--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <h1>Information Retriever App</h1>
-    <form method="POST">
+    <!-- <form method="POST"> -->
         <!-- <input type="text" name="city" placeholder="Enter City"> -->
         <!-- <button type="submit">Get Weather</button> -->
-    </form>
+    <!-- </form> -->
     {% if info is not none%}
     <ul>
         {% for key, value in info.items() %}
