--- a/templates/index.html
+++ b/templates/index.html
@@ -36,13 +36,13 @@
 <div id="map"></div>
 
 <script>
-    var map = L.map('map').setView([LATITUDE, LONGITUDE], 13);
+    var map = L.map('map').setView([{{ LATITUDE }}, {{ LONGITUDE }}], 13);
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         maxZoom: 19
     }).addTo(map);
 
-    L.marker([LATITUDE, LONGITUDE]).addTo(map)
+    L.marker([{{ LATITUDE}}, {{ LONGITUDE}}]).addTo(map)
         .bindPopup('Your Location')
         .openPopup();
 </script>
