--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,10 @@
     <script src="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.css" />
     <style>
-        #map { height: 400px; }
+        #map {
+        width: 600px; /* 幅を変更 */
+        height: 400px; /* 高さを変更 */
+        }
     </style>
 </head>
 <body>
