--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,7 @@
     </style>
 </head>
 <body>
+    <div class="container">
     <h1>Information Retriever App</h1>
     <p> client-IP: {{ client_ip }}</pp>
     <p> MY-IP: {{ ip_address }}</p>
@@ -84,5 +85,6 @@
         .openPopup();
 </script>
 {% endif %}
+</div>
 </body>
 </html>
