--- a/templates/index.html
+++ b/templates/index.html
@@ -49,8 +49,7 @@
 <body>
     <div class="container">
     <h1>Information Retriever App</h1>
-    <p> client-IP: {{ client_ip }}</pp>
-    <p> MY-IP: {{ ip_address }}</p>
+    <p> client-IP: {{ client_ip }}</p>
     {% if info is not none%}
     <ul>
         {% for key, value in info.items() %}
