--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
 </div>
 
 <footer id="main-footer">
-    <p>Copyright &copy; 2024 My Website</p>
+    <p>Copyright &copy; 2024 by 9aiXweb</p>
 </footer>
 </body>
 </html>
