--- a/static/styles.css
+++ b/static/styles.css
@@ -49,8 +49,7 @@ body{
   min-height: 300px;
 
   margin-bottom: 30px;
-  text-align: left;
-  width: 30px;
+  text-align: center;
 }
 
 #showcase h1{
@@ -58,6 +57,16 @@ body{
   font-size: 50px;
   line-height: 1.6em;
   padding-top: 30px;
+}
+
+#showcase ul{
+  padding: 0;
+  list-style: none;
+}
+#showcase li{
+	padding: 6px;
+	border-bottom: dotted 1px #333;
+	list-style-image: url('images/check.png');
 }
 
 #main{
@@ -92,4 +101,10 @@ body{
       width: 100%;
       float: none;
   }
+}
+
+#map{
+  width: 100%;
+  height: 300px;
+  margin-top: 30px;
 }
