--- a/static/styles.css
+++ b/static/styles.css
@@ -1,12 +1,11 @@
 body{
-  max-width: 500px;
-  max-height: 300px;
+  max-width: 800px;
   background-color: #f4f4f4;
   color: #555;
   font-family: "Comic Sans MS";
   font-size: 16px;
   line-height: 1.6em;
-  margin: 0;
+  margin: 0 auto;
 }
 
 .container{
@@ -107,7 +106,7 @@ body{
 }
 
 #map{
-  width: 80%;
-/*   height: 300px; */
+  width: 70%; 
+  height: 300px;
   margin-top: 0px;
 }
