--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,5 @@
 body{
-  max-width: 800px;
+  max-width: 1200px;
   background-color: #f4f4f4;
   color: #555;
   font-family: "Comic Sans MS";
@@ -16,7 +16,7 @@ body{
 
 #main-header{
   font-family: "Comic Sans MS";
-  font-size: 30px;
+  font-size: 24px;
   background-image: url('images/header.jpeg');
   text-align: center;
   background-color:coral;
@@ -106,7 +106,7 @@ body{
 }
 
 #map{
-  width: 70%; 
-  height: 300px;
-  margin-top: 0px;
+  width: 100%; 
+  max-height: 500px;
+  margin: 0 auto;
 }
